fixed spacing between rows and made squares smaller

--- a/PixelCSS.css
+++ b/PixelCSS.css
@@ -1,14 +1,14 @@
 .square{
-    height:40px;
-    width:40px;
+    height:15px;
+    width:15px;
     display:inline-block;
-    border: solid black 2px;
+    border: solid black 1px;
 }
 
 .circle {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    border: solid black 2px;
+    border: solid black 1px;
     display:inline-block;
   }
